Add exception translation to JUnit4 Rules